# ninja-build-syntax

./: Cargo.toml  LICENSE  README.md
benches/: bench_assets.rs
byte-slice/: Cargo.toml
byte-slice/src/: lib.rs
src/: byte_slice.rs  error.rs  lib.rs  parsers.rs  statements.rs  test_macros.rs
src/parsers/: test_macros.rs
test-data/: Cargo.toml
test-data/src/: assets.tar.xz  lib.rs
tests/: test_assets.rs
