[package]
name = "ninja-build-syntax"
version = "0.0.1"
authors = ["Frank Benkstein <frank@benkstein.net>"]
edition = "2018"
description = "Parser for ninja's manifest file format, i.e. `ninja.build` files."
repository = "https://github.com/fbenkstein/ninja-build-syntax"
documentation =  "https://docs.rs/ninja-build-syntax"
license-file = "LICENSE"

[dependencies]
nom = "5.0"

[dev-dependencies]
bstr = "0.2"
criterion = "0.2"
crossbeam = "0.3"
tar = "0.4"
test-data = { path = "test-data" }
xz2 = "0.1"

[[bench]]
name = "bench_assets"
harness = false
